[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/bin/echo/main.rs"

[[bin]]
name = "unique"
path = "src/bin/unique-id/main.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
once_cell = "1.19.0"
