[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
default = ["broadcast", "counter", "echo", "unique"]
broadcast = []
counter = []
echo = []
replicated_log = []
unique = []

[[bin]]
name = "echo"
path = "src/bin/echo/main.rs"
required-features = ["echo"]

[[bin]]
name = "unique"
path = "src/bin/unique-id/main.rs"
required-features = ["unique"]

[[bin]]
name = "broadcast"
path = "src/bin/broadcast/main.rs"
required-features = ["broadcast"]

[[bin]]
name = "counter"
path = "src/bin/counter/main.rs"
required-features = ["counter"]

[[bin]]
name = "replicated-log"
path = "src/bin/replicated-log/main.rs"
required-features = ["replicated_log"]

[dependencies]
anyhow = "1.0.86"
assert-json-diff = "2.0.2"
clap = { version = "4.5.8", features = ["derive"] }
fs2 = "0.4.3"
hex = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
sha2 = "0.10.8"
tempfile = "3.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
once_cell = "1.19.0"
